--- a/index.html
+++ b/index.html
@@ -1,8 +1,117 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+
+<head>
+   <title>One Piece: Wano-kuni Retold!</title>
+   <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+   <main>
+      <header>
+         <img id="logoBanner" src="Images/One piece banner.jpeg" alt="Banner displaying One Piece logo">
+         <h1 id="mainHeading">One Piece: The Wano-Kuni arc retold</h1>
+      </header>
+
+      <p id="testP" class="funParagraph"> <em>One Piece</em> is a weekly manga series by Eiichiro Oda, which has
+         published and serialized in Shueisha's Weekly Shonen Jump magazine since
+         1997. Since serialization, <em>One Piece</em> has published a total of 1109 chapters which are compiled in 108
+         volumes. The manga received an anime adaptation in October 1999 and has been airing on
+         television ever since, with a current total of 1096 episodes and counting.
+         <br><br> At the end of December 2023, we saw the conclusion of <em>One Piece's</em>
+         latest mega arc, <b>Wano-kuni</b>, which brought an end to the story's &quot;New World&quot; saga. On this
+         page, you will see a retelling of the story of Wano-kuni, with a brief synopsis of the story thus
+         far and relevasnt context to the climactic saga. Please enjoy!
+      </p>
+
+      <img src="Images/Straw hat pirates.webp" alt="Image displaying the Straw Hat Pirate crew">
+      <p id="caption1"><em>Luffy (center) and his Straw Hat Pirate crew</em></p>
+
+      <section>
+         <h2>Context</h2>
+         <p> <em>One Piece</em> is the story of a pirate boy named Monkey D. Luffy. Luffy's goal is to gather a pirate
+            crew who will help him sail the seas of the Grand Line and ultimately find the One Piece, the treasure left
+            behind by the king of the pirates - Gol D. Roger. Doing so would make Luffy the new kiong of the pirates and
+            help him achieve his dream, but the Grand Line is a harsh sea which presents many difficult challenges to
+            Luffy. Luffy has since collected his crew-- the Strawhat Pirates-- and they are taking the Grand Line by
+            storm.</p>
+         <p>Leading up to the Wano-kuni arc, Luffy and the Straw-hat pirates have made quite a name for themselves. They
+            have visited uncharted territories, liberated countries that have been terrorized by pirates identified by
+            the World Government as &quot;Warlords of the Sea&quot;, they've learned a bit about the history of the
+            world they live in, and they've even picked a fight with two of the pirates who hold the title of "The Four
+            Emperors of the Sea". Luffy is a member of a young group of new pirates who are making big waves in the
+            Grand Line, called &quot;The Worst Generation&quot;. He has formed an alliance with one of the members of
+            that group, named Trafalger Law, to take down King of the Beasts, Kaido, one of the four Emperors. On the
+            island that they form the alliance with Law and his pirate group, the Heart Pirates, the Straw Hat crew
+            meets two strange samurai-- a man named Kin'emon and a young child named Momonosuke who join the crew's
+            adventure in hopes of finding their samurai friends who they've been separated from. They eventually reunite
+            with their lost samurai friends and learn that they share the common goal of defeating Kaido in their home
+            country, Wano.<br><br> The groups set sail to Wano, determined to bring down Emperor Kaido, but there is
+            also an important second goal, to find a missing piece of the map to the One Piece, which Luffy and his crew
+            are ever so close to finding. Will they achieve their goals of defeating Kaido and finding the missing
+            piece?? </p>
+      </section>
+
+      <article>
+         <h3>Arriving at Wano</h3>
+         <img src="Images/Wano Flower Capital.png" alt="Image displaying the land of Wano's Flower Capital">
+         <p id="caption2"><em>Wano's Flower Capital, the only well-maintained land under Orochi and Kaido's regime</em>
+         </p>
+         <p>As Luffy lands on the shores of Wano and meets a young girl named Otama, nicknamed &quot;Tama&quot;. Through
+            Tama, Luffy learns that the once beautiful land of Wano has been diminished to an enfamished wasteland with
+            poisoned waters by Kaido. The only place in Wano that has kept its former glory is the Flower Capital, which
+            is where the evil new shogun, Orochi lives.</p>
+      </article>
+
+      <article>
+         <h3>Wano Act One</h3>
+         <img src="Images/Kaido dragon.webp" alt="Image displaying Kaido in his dragon form">
+         <p id="caption3"><em>Kaido in his newly revealed dragon form</em></p>
+         <p>Because Tama gives Luffy the only rice that she gets to eat in the entire year, Luffy vows to defeat Kaido
+            no matter what to restore Wano back to what it was. Luffy and his crew learns that Kin&apos;emon and his
+            samurai companions travelled from 20 years in the past to challenge Kaido to a decisive battle with the
+            remaining samurai in his group that are scattered across Wano. Despite learning that Kaido can transform
+            into a dragon, Luffy challenges Kaido to a one-on-one duel but loses badly and is thrown in jail.</p>
+
+      </article>
+
+      <article>
+         <h3>Wano Act Two</h3>
+         <img src="Images/Kozuki Oden.webp" alt="Image displaying Kozuki Oden">
+         <p id="caption4"><em>Kozuki Oden, the former shogun of Wano</em></p>
+         <p>While in jail, Luffy meets another one of the Worst Generation, Eustace Kidd, who has also been defeated by
+            Kaido. They begin to compete against each other to get stronger and break out of prison. We learn the
+            Momonosuke is the son of Kozuki Oden, the former shogun of Wano. Momnonosuke will rule as the new shogun
+            should they defeat Kaido. Kin'emon eventually meets up with the remaining samurai in his group and the team
+            prepares to set sail towads Kaido and challenge him to take back Wano.</p>
+      </article>
+
+      <article>
+         <h3>Wano Act Three</h3>
+         <img src="Images/Luffy vs Kaido.jpeg" alt="Image displaying Luffy and Kaido's final confrontation">
+         <p id="caption5"><em>Kaido (left) and Luffy (right) during their final confrontation</em></p>
+
+         <p>In Act Three of Wano, Luffy, the allied pirates, the samurai, and other allies battle Kaido, his pirate
+            crew, and the evil shogun Orochi. In the middle of the battle, Momonosuke ages 20 years using the magic of
+            one of the samurai and he helps Luffy defeat Kaido. Orochi is also defeated and Momonosuke is able to take
+            his rightful spot as shogun of Wano.</p>
+      </article>
+
+      <article>
+         <h3>Story Implications</h3>
+         <p>Upon defeating Kaido and Big Mom-- another Emperor who followed Luffy into Wano-- Luffy has been named as
+            one of the new Four Emperors. The Straw Hats also find the missing piece of the missing map to the One
+            Piece. There is now one piece (no pun intended) of the map that the crew needs in order to finally locate
+            the king of the pirates' treasure. </p>
+      </article>
+
+
+   </main>
+
+   <footer>
+      <p>All characters and images in One Piece were created by Eiichiro Oda.</p>
+      <p>© 2024 Julian Jackson</p>
+   </footer>
+</body>
+
 </html>
